--- a/public/css.css
+++ b/public/css.css
@@ -72,3 +72,10 @@ form > div {
 .hide {
 	display: none;
 }
+
+#dash-table-container {
+	width: 80%;
+	max-width: 1024px;
+	margin: auto;
+	margin-top: 30px;
+}
