--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -82,15 +82,13 @@
               <form method="post" action="#" role="register" >
                 <img src="/popper.png" class="img-responsive" alt="" />
                 <fieldset class="form-group">
-                  <div class="form-check">
+                  <div class="form-check" id="register-type">
                     <label class="form-check-label">
-                      <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios1" value="option1" checked>
+                      <input type="radio" class="form-check-input" name="optionsRadios" value="1" checked>
                       I'm an event organizer!
                     </label>
-                  </div>
-                  <div class="form-check">
-                  <label class="form-check-label">
-                      <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios2" value="option2">
+                    <label class="form-check-label">
+                      <input type="radio" class="form-check-input" name="optionsRadios"d value="0">
                       I'm a service provider!
                     </label>
                   </div>
