spelling mistake corrected

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="/bootstrap.css" />
     <link rel="stylesheet" href="/jquery-ui.min.css" />
     <link rel="stylesheet" href="/css.css" />
-    <title>Party Poper</title>
+    <title>Party Popper</title>
   </head>
   <body>
     {{#if user}}
